# polybin

./: README.md  pyproject.toml  requirements.txt  setup.py
polybin/: __init__.py  api.py  builders.py  cli.py
polybin/ico/: _core.py
polybin/mp4/: _core.py
polybin/zip/: _core.py
tests/: run_tests.py  test.py
